# SoundLinuxAgent

./: .dockerignore  .gitignore  .gitmodules  AgentObserver.h  AudioDevice.h  AudioDeviceApiClient.cpp  AudioDeviceApiClient.h  AudioDeviceCollection.cpp  AudioDeviceCollection.h  CMakeLists.txt  CMakePresets.json  ClassDefHelper.h  Contracts.h  Dockerfile  Folder.DotSettings  FormattedOutput.cpp  FormattedOutput.h  GetWslEthernetAdapter.ps1  HttpRequestDispatcherInterface.h  HttpRequestProcessor.cpp  HttpRequestProcessor.h  KeyInputThread.h  LinuxSoundScanner.cpp  LinuxSoundScanner.xml  MixerRaiiPtrs.h  PulseDevice.cpp  PulseDevice.h  PulseDeviceCollection.cpp  PulseDeviceCollection.h  README.md  RabbitMqHttpRequestDispatcher.cpp  RabbitMqHttpRequestDispatcher.h  RequestPublisher.cpp  RequestPublisher.h  ScopeLogger.h  ServiceObserver.cpp  ServiceObserver.h  SodiumCrypt.cpp  SoundAgent.cpp  SoundAgentInterface.cpp  (+11 more)
.github/workflows/: build-and-upload.yml
SoundLib/: CMakeLists.txt  ScopeLogger.h  SoundLibRuntimeSettings.h  SpdLogger.h
SoundLib/impl/: PulseDevice.h  PulseDeviceCollection.cpp  PulseDeviceCollection.h  SoundAgent.cpp  SoundLibRuntimeSettings.cpp
SoundRepoApiClient/: AudioDeviceApiClient.cpp  HttpRequestProcessor.cpp
deploy-via-docker/: docker-compose.yml
internal/: SpdLogger.h  StringUtils.cpp  StringUtils.h  TimeUtil.h
internal/SpdLogger/: AppPath.h  LogBuffer.h  Logger.h
public/: SoundAgentInterface.h
pulseaudio_lib/: CMakeLists.txt  ScopeLogger.h
pulseaudio_lib/impl/: PulseDeviceCollection.h
vcpkg-ports/rmqcpp/: portfile.cmake  usage  vcpkg.json
